Add test employee service, fix report service and selectedoption service